# web-rs-jsonforms

./: .gitignore  README.md  cargo.toml  diesel.toml
app_common/: Cargo.toml
app_common/src/: api_v1.rs  app_error.rs  app_state.rs  lib.rs  objects.rs  schema.rs
app_common/src/objects/: json_forms.rs  users.rs
client_app/: README.md  package-lock.json  package.json
client_app/src/: AppEx.tsx  index.tsx
client_app/src/Controls/: Password.tsx  PasswordControl.tsx  passwordControlTester.ts
client_app/src/objects/user_app/: App.ts
db/migrations/2023-04-28-143444_create_users/: up.sql
jsonforms/: Cargo.toml
jsonforms/src/: json_forms.rs  lib.rs
jsonforms_derive/: Cargo.toml
jsonforms_derive/src/: lib.rs  ser.rs
jsonforms_derive/src/internals/: symbol.rs
server/: Cargo.toml
server/src/: main.rs
user_app/: Cargo.toml
user_app/src/: api_v1.rs  lib.rs  objects.rs
user_app/src/objects/: app.rs  json_forms.rs
user_app_common/: Cargo.toml
user_app_common/src/objects/: app.rs
user_wasm_lib/: Cargo.toml
user_wasm_lib/src/: lib.rs
