[package]
name = "jsonforms_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jsonforms_derive"
proc-macro = true

[dependencies]
itertools = "0.10.5"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"

