[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user_app = { path = "../user_app" }
app_common = { path = "../app_common"}
actix-files = "0.6.2"
actix-web = "4.3.1"
flexi_logger = "0.25.3"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
actix-cors = "0.6.4"

