[package]
name = "user_app_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonforms = { path = "../jsonforms" }
jsonforms_derive = { path = "../jsonforms_derive" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"